Revision history for Perl module Net::Amazon::S3:

0.99
	- Client API doesn't check corrupted download anymore (using ETag == MD5)

0.98 2021-03-22
	- document how to use buckets with dots, Signature V4, and HTTPS together
	- fix Net::Amazon::S3::Client::Object::exists (#94)
	- improve compatibility with DigitalOcean Spaces (#95)

0.97 2020-10-09
	- presigned object access uri supports also PUT/DELETE methods (#89)

0.96 2020-10-07
	- Signature V4 didn't work properly for services on non-standard port (issue #88)

0.95 2020-10-06
	- bugfix release, with new test coverage
	- small cleanups

0.94 2020-09-27
	- fix undefined method call in still untested methods (thanks Russell Jenkins)

0.93 2020-09-27
	- fix syntax failures on perl < v5.22 (thanks cpantesters)

0.92 2020-09-26
	- misc cleanups, more tests
	- Net::Amazon::S3::Client now can be constructed with same arguments as Net::Amazon::S3
	- Support explicit ACL in bucket/object/upload creation
	- Support set_acl on Client::Bucket / Client::Object (issue #83)
	- Add support for bucket/object tagging (issue #44)

0.91 2020-08-19 23:25 +0
	- fix regressions introduced by 0.90
	  - undeclared dependency
	  - broken usage of hashref argument in N:A:S3 construction

0.90 2020-08-18 16:00 +0
    - Support intelligent_tiering, glacier, and deep_archive storage classes
	  (thanks Sherwin Daganato)
	- Object availability predicate (thanks Emanuele Tomasi)
	- fix default region handling (#77, #78, #80)
    - new authentication context architecture
	  See Net::Amazon::S3::Authorization::IAM for future incompatiblity warning

0.89 Tue 11 Feb 2020 20:26:26
    - fix signature v4 test (Ali Zia)

0.88 Sat  1 Feb 2020 21:29:52
    - Allow passing headers from client to InitiateMultipartUpload request (Ali Zia)
    - sign uri with iam role (kuriyama)
    - Canned ACLs updated (ratsbane)

0.87 Mon  9 Dec 2019 19:53:42 GMT
    - Time::Piece fix from Eden Crane
    - eu-north-1 region (happy-barney)