@@ -11,7 +11,7 @@ use Shared::Examples::Net::Amazon::S3::Client qw[ expect_client_object_head ];
 plan tests => 6;
 
 expect_client_object_head 'head existing object' => (
-	-method                 => 'head',
+	-method                 => 'exists',
 	with_bucket             => 'some-bucket',
 	with_key                => 'some-key',
 	with_response_code      => HTTP_OK,
@@ -24,16 +24,11 @@ expect_client_object_head 'head existing object' => (
 		date                => 'Fri, 09 Sep 2011 23:36:00 GMT',
 	},
 	expect_request          => { HEAD => 'https://some-bucket.s3.amazonaws.com/some-key' },
-	expect_data             => {
-		ContentLength => 10,
-		ContentType   => 'text/plain',
-		ETag          => 'some-key-etag',
-		MetadataFoo   => 'foo-1',
-	},
+	expect_data             => bool (1),
 );
 
 expect_client_object_head 'S3 error - Access Denied' => (
-	-method                 => 'head',
+	-method                 => 'exists',
 	with_bucket             => 'some-bucket',
 	with_key                => 'some-key',
 	with_response_fixture ('error::access_denied'),
@@ -42,25 +37,25 @@ expect_client_object_head 'S3 error - Access Denied' => (
 );
 
 expect_client_object_head 'S3 error - Bucket Not Found' => (
-	-method                 => 'head',
+	-method                 => 'exists',
 	with_bucket             => 'some-bucket',
 	with_key                => 'some-key',
 	with_response_fixture ('error::no_such_bucket'),
 	expect_request          => { HEAD => 'https://some-bucket.s3.amazonaws.com/some-key' },
-	expect_s3_error_bucket_not_found,
+	expect_data             => bool (0),
 );
 
 expect_client_object_head 'S3 error - Object Not Found' => (
-	-method                 => 'head',
+	-method                 => 'exists',
 	with_bucket             => 'some-bucket',
 	with_key                => 'some-key',
 	with_response_fixture ('error::no_such_key'),
 	expect_request          => { HEAD => 'https://some-bucket.s3.amazonaws.com/some-key' },
-	expect_s3_error_object_not_found,
+	expect_data             => bool (0),
 );
 
 expect_client_object_head 'HTTP error - 400 Bad Request' => (
-	-method                 => 'head',
+	-method                 => 'exists',
 	with_bucket             => 'some-bucket',
 	with_key                => 'some-key',
 	with_response_fixture ('error::http_bad_request'),
